# researchbook

./: .cirrus.yml  .gitignore  BUILD_PLATFORMS.md  LICENSE  README.md  appveyor.yml  azure-pipelines.yml  index.html  package-lock.json  package.json  tailwind.config.js  v0.2.0-roadmap.md  vite.config.ts
.github/workflows/: build.yml  release.yml  test.yml
scripts/: copy-pdf-worker.cjs
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src-tauri/src/commands/: book.rs  export.rs  mod.rs  page.rs  page_image.rs  pdf_chunk.rs
src-tauri/src/db/: mod.rs  schema.sql
src-tauri/src/db/migrations/: 001_unified_canvas.sql  002_fix_canvas_state.sql
src-tauri/src/models/: models.rs
src/components/: LibraryView.tsx  PageTurner.tsx  ResearchCanvas.tsx  Toolbar.tsx
src/hooks/: useBookLibrary.ts  usePageImage.ts  usePageState.ts  usePdfConverter.ts  usePdfDocument.ts
src/lib/: pdfTransport.ts
src/store/: appStore.ts
src/types/: index.ts
