[package]
name = "research-book"
version = "0.1.0"
description = "Local-first PDF research and annotation app"
authors = ["ResearchBook"]
edition = "2021"
rust-version = "1.78"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled", "chrono"] }
include_dir = "0.7"
thiserror = "1"
anyhow = "1"

[features]
custom-protocol = ["tauri/custom-protocol"]
